--- a/src/localStorage/ejemploLocalStorage.html
+++ b/src/localStorage/ejemploLocalStorage.html
@@ -1,5 +1,18 @@
-<div id="x">
-	
+<!DOCTYPE html>
+<html lang="es">
+
+<head>
+  
+    <link href="../../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="../../css/simple-sidebar.css" rel="stylesheet" />
+    <script src="../../bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="../../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="../../js/funcionesLocalStorage.js"></script>
+    </head>
+
+<body>
+  <div id="x">
+  
 
 <ul class="nav nav-tabs">
   <li class="active"><a data-toggle="tab" href="#home">Home</a></li>
@@ -35,3 +48,6 @@ Suspendisse porta tellus at risus malesuada maximus. Mauris sit amet urna sit am
 <button id="reload2" type="button" class="btn btn-primary">Recargar con LocalStorage</button>
 
 </div> 
+
+
+</body>
