--- a/src/localStorage/ejemploLocalStorage.html
+++ b/src/localStorage/ejemploLocalStorage.html
@@ -15,9 +15,9 @@
   
 
 <ul class="nav nav-tabs">
-  <li class="active"><a data-toggle="tab" href="#home">Home</a></li>
-  <li><a data-toggle="tab" href="#menu1">Menu 1</a></li>
-  <li><a data-toggle="tab" href="#menu2">Menu 2</a></li>
+  <li class="active"><a id="home" data-toggle="tab" href="#home">Home</a></li>
+  <li><a id="menu1" data-toggle="tab" href="#menu1">Menu 1</a></li>
+  <li><a id="menu2" data-toggle="tab" href="#menu2">Menu 2</a></li>
 </ul>
 
 <div class="tab-content">
@@ -44,9 +44,10 @@ Suspendisse porta tellus at risus malesuada maximus. Mauris sit amet urna sit am
   </div>
 </div>
 
+<!--
 <button id="reload1" type="button" class="btn btn-primary">Recargar sin LocalStorage</button>
 <button id="reload2" type="button" class="btn btn-primary">Recargar con LocalStorage</button>
-
+-->
 </div> 
 
 
