--- a/src/localStorage/ejemploLocalStorage.html
+++ b/src/localStorage/ejemploLocalStorage.html
@@ -15,9 +15,9 @@
   
 
 <ul class="nav nav-tabs">
-  <li class="active"><a id="home" data-toggle="tab" href="#home">Home</a></li>
-  <li><a id="menu1" data-toggle="tab" href="#menu1">Menu 1</a></li>
-  <li><a id="menu2" data-toggle="tab" href="#menu2">Menu 2</a></li>
+  <li class="active"><a id="0" data-toggle="tab" href="#home">Home</a></li>
+  <li ><a id="1"data-toggle="tab" href="#menu1">Menu 1</a></li>
+  <li ><a  id="2" data-toggle="tab" href="#menu2">Menu 2</a></li>
 </ul>
 
 <div class="tab-content">
