--- a/src/localStorage/ejemploLocalStorage.html
+++ b/src/localStorage/ejemploLocalStorage.html
@@ -12,7 +12,7 @@
 
 <body>
   <div id="x">
-  
+  <h2>Ejemplo LocalStorage</h2>
 
 <ul class="nav nav-tabs">
   <li class="active"><a id="0" data-toggle="tab" href="#home">Home</a></li>
