--- a/src/sessionStorage/ejemploSessionStorage.html
+++ b/src/sessionStorage/ejemploSessionStorage.html
@@ -1,1 +1,53 @@
-<div id="x">Session Storage</div> 
+<!DOCTYPE html>
+<html lang="es">
+
+<head>
+  
+    <link href="../../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="../../css/simple-sidebar.css" rel="stylesheet" />
+    <script src="../../bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="../../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    </head>
+
+<body>
+  <div id="x">
+  <h2>Ejemplo Sessiontorage</h2>
+
+<ul class="nav nav-tabs">
+  <li class="active"><a id="0" data-toggle="tab" href="#home">Home</a></li>
+  <li ><a id="1"data-toggle="tab" href="#menu1">Menu 1</a></li>
+  <li ><a  id="2" data-toggle="tab" href="#menu2">Menu 2</a></li>
+</ul>
+
+<div class="tab-content">
+  <div id="home" class="tab-pane fade in active">
+    <h3>HOME</h3>
+    <p>Some content.</p>
+  </div>
+  <div id="menu1" class="tab-pane fade">
+    <h3>Menu 1</h3>
+    <p>Some content in menu 1.</p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eget rhoncus sem, nec faucibus sem. Vestibulum ligula risus, pretium et molestie sit amet, varius id ex. Duis hendrerit lorem nisl, quis rhoncus eros ultricies vel. Curabitur commodo ut ipsum eu faucibus. Aliquam tincidunt metus in est placerat, vitae pulvinar dui tincidunt. Phasellus ornare ultrices nunc, at dictum eros sollicitudin in. Vivamus vitae lacus orci. Morbi pretium elit diam, sit amet venenatis tellus porttitor in. Nam sodales risus risus, sed tempor ligula facilisis eu. Quisque placerat nibh ac luctus fringilla. Sed volutpat, mauris eget consectetur lacinia, risus nibh dictum ligula, ut scelerisque velit mauris ac ligula.
+
+Vestibulum porttitor justo consectetur accumsan ullamcorper. Integer blandit sit amet mi at consectetur. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Phasellus hendrerit libero ut enim interdum auctor. Phasellus tempus vel ligula sed porta. Curabitur pharetra, metus ut vehicula tempor, nibh nibh tincidunt ex, id luctus lorem felis non felis. Nullam sed tempus enim. Integer rhoncus imperdiet pretium. Duis non lorem et turpis feugiat facilisis quis a metus.
+
+Curabitur id dolor id risus tempus dignissim ut vitae lectus. Nulla porta mi vitae leo sollicitudin, iaculis tempor ipsum tincidunt. Donec efficitur augue id lacus congue, non tristique orci tempus. In neque lacus, fringilla eget lectus faucibus, bibendum volutpat sem. Donec neque lorem, imperdiet quis nulla in, sodales scelerisque nunc. Sed sed libero diam. Donec pretium dolor vitae justo iaculis dapibus. Nam vulputate lacus dui, nec cursus leo consectetur sed. Sed elit nisl, tristique in libero at, sollicitudin ultrices ante.
+
+In pellentesque nisl ut ipsum commodo fringilla. Aenean mattis id justo vel fringilla. Sed elementum in dui id euismod. Etiam et fermentum ligula. Suspendisse dignissim enim ac rhoncus tempor. Phasellus ac justo eu libero facilisis finibus. Vivamus eu pretium augue.
+
+Suspendisse porta tellus at risus malesuada maximus. Mauris sit amet urna sit amet enim rhoncus feugiat. Fusce quis dolor purus. Nullam sit amet gravida quam. Etiam ornare mollis elit, a fringilla nunc volutpat ut. Vestibulum mattis mollis sem, vel molestie tortor faucibus facilisis. Praesent molestie consequat nibh, at euismod orci lacinia ut. Suspendisse potenti.</div>
+  <div id="menu2" class="tab-pane fade">
+    <h3>Menu 2</h3>
+    <p>Some content in menu 2.</p>
+    "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+  </div>
+</div>
+
+<!--
+<button id="reload1" type="button" class="btn btn-primary">Recargar sin LocalStorage</button>
+<button id="reload2" type="button" class="btn btn-primary">Recargar con LocalStorage</button>
+-->
+</div> 
+
+
+</body>
