--- a/src/indexedDb/ejemploIndexedDb.html
+++ b/src/indexedDb/ejemploIndexedDb.html
@@ -1,1 +1,41 @@
-<div id="x">Indexed DB</div> 
+<!DOCTYPE html>
+<html lang="es">
+
+<head>
+    <link href="../../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="../../css/simple-sidebar.css" rel="stylesheet" />
+    <script src="../../bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="../../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+</head>
+
+<body>
+    <div id="x">
+        <h2>Ejemplo IndexedDB</h2>
+        <form id="formPersona" role="form">
+            <div class="form-group">
+                <label for="nombre">Nombre:</label>
+                <input name="nombre" type="text" class="form-control" id="nombre">
+            </div>
+            <div class="form-group">
+                <label for="apellido">Apellido</label>
+                <input name="apellido" type="text" class="form-control" id="apellido">
+            </div>
+            <div class="form-group">
+                <label for="email">Email address:</label>
+                <input name="email" type="email" class="form-control" id="email">
+            </div>
+            <button id="loadIndexed" class="btn btn-primary">Añadir</button>
+        </form>
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th>Nombre</th>
+                    <th>Apellido</th>
+                    <th>Email</th>
+                </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
+    </div>
+</body>
