--- a/src/indexedDb/ejemploIndexedDb.html
+++ b/src/indexedDb/ejemploIndexedDb.html
@@ -34,7 +34,7 @@
                     <th>Email</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody id="tBodyPersonas">
             </tbody>
         </table>
     </div>
