--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="es" manifest="ejemplo.appcache">
-
+<!--<html lang="es">-->
 <head>
     <meta charset="utf-8">
     <meta name="description" content="">
