--- a/src/fileSystem/ejemploFileSystem.html
+++ b/src/fileSystem/ejemploFileSystem.html
@@ -1,1 +1,13 @@
-<div id="x">File System</div> 
+<div id="x">File System
+    <h1>Carga una cancion</h1>
+    <input type="file" id="canciones">
+    <table class="table table-hover">
+        <thead>
+            <tr>
+                <th>Lista canciones</th>
+            </tr>
+        </thead>
+        <tbody id="tBodyCanciones">
+        </tbody>
+    </table>
+</div>
