--- a/src/fileSystem/ejemploFileSystem.html
+++ b/src/fileSystem/ejemploFileSystem.html
@@ -1,3 +1,14 @@
+<!DOCTYPE html>
+<html lang="es" manifest="ejemplo.appcache">
+
+<head>
+    <link href="../../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="../../css/simple-sidebar.css" rel="stylesheet" />
+    <script src="../../bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="../../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+</head>
+<body>
+
 <div id="x">File System
     <h1>Carga una cancion</h1>
     <input type="file" id="canciones">
@@ -11,3 +22,5 @@
         </tbody>
     </table>
 </div>
+</body>
+</html>
