--- a/src/indexedDb/ejemploIndexedDb.html
+++ b/src/indexedDb/ejemploIndexedDb.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" manifest="ejemplo.appcache">
 
 <head>
     <link href="../../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -25,6 +25,7 @@
                 <input name="email" type="email" class="form-control" id="email">
             </div>
             <button id="loadIndexed" class="btn btn-primary">Añadir</button>
+            
         </form>
         <table class="table table-hover">
             <thead>
