--- a/src/navigator/ejemploNavigator.html
+++ b/src/navigator/ejemploNavigator.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" manifest="ejemplo.appcache">
 
 <head>
     <link href="../../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -12,7 +12,16 @@
 <body>
     <div id="x">
         <h2>Objeto Navigator</h2>
-        <p>
+        
+        <p><label id="estado"></label></p>
+		<p><label id="plataforma"></label></p>
+		<p><label id="navegador"></label></p>
+		<p><label id="version"></label></p>
+		<p><label id="idioma"></label></p>
+		
+
+
+
         
 
     </div>
