--- a/src/localStorage/ejemploLocalStorage.html
+++ b/src/localStorage/ejemploLocalStorage.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" manifest="../ejemplo.appcache">
 
 <head>
     <link href="../../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="../../css/simple-sidebar.css" rel="stylesheet" />
     <script src="../../bower_components/jquery/dist/jquery.min.js"></script>
     <script src="../../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="../../js/funcionesLocalStorage.js"></script>
+    
 </head>
 
 <body>
     <div id="x">
-        <h2>Ejemplo LocalStorage</h2>
+        <h2>Ejemplo LocalStorage </h2>
         <p>
         <fieldset>
             <legend>Ejemplo 1: Estado Tabs</legend>
@@ -37,7 +37,7 @@
             </div>
         </fieldset>
         </p>
-        <fieldset><legend>Ejemplo 2: </legend></fieldset>
+        
 
     </div>
 </body>
