--- a/src/sessionStorage/ejemploSessionStorage.html
+++ b/src/sessionStorage/ejemploSessionStorage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" manifest="ejemplo.appcache">
 
 <head>
     <link href="../../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
